--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "dev": "node src/index.ts"
+    "dev": "node src/index.js"
   },
   "type": "module"
 }
