--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "apollo-server": "^3.6.7",
+    "dotenv": "^16.0.1",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "prisma": "^3.12.0",
